//
// PROJECT:         Aspia
// FILE:            proto/auth_session_message.proto
// LICENSE:         Mozilla Public License Version 2.0
// PROGRAMMERS:     Dmitry Chapyshev (dmitry@aspia.ru)
//

syntax = "proto3";

option optimize_for = LITE_RUNTIME;

package aspia.proto;

enum AuthMethod
{
    AUTH_METHOD_UNKNOWN = 0;

    // Means of protocol (user name, password).
    AUTH_METHOD_BASIC = 1;
}

enum SessionType
{
    SESSION_TYPE_UNKNOWN        = 0;
    SESSION_TYPE_DESKTOP_MANAGE = 1;
    SESSION_TYPE_DESKTOP_VIEW   = 2;
    SESSION_TYPE_POWER_MANAGE   = 4;
    SESSION_TYPE_FILE_TRANSFER  = 8;
    SESSION_TYPE_SYSTEM_INFO    = 16;
}
